--- a/_includes/modelViewer.html
+++ b/_includes/modelViewer.html
@@ -1,6 +1,6 @@
 <div class="embed-container">
     <iframe
-        src="https://kristian-dixon.github.io/Extra/JekyllPlugins/GLTFViewer/?modelname={{ include.id }}"
+        src="/Extra/JekyllPlugins/GLTFViewer/?modelname={{ include.id }}"
         width="100%"
         height="100%"
         frameborder="0"
