Added pagnation support

--- a/_includes/modelViewer.html
+++ b/_includes/modelViewer.html
@@ -1,5 +1,7 @@
 <div class="embed-container">
     <iframe
+        id="demo-frame"
+        name="demo-frame"
         src="/Extra/JekyllPlugins/GLTFViewer/?modelname={{ include.id }}"
         width="100%"
         height="100%"
