--- a/_includes/WEBGPUViewer.html
+++ b/_includes/WEBGPUViewer.html
@@ -1,6 +1,6 @@
 <div class="embed-container">
     <iframe
-        src="https://kristian-dixon.github.io/Extra/WebGPUParticles/"
+        src="/Extra/WebGPUParticles/"
         width="100%"
         height="800"
         frameborder="0"
