--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -106,7 +106,8 @@ body
     flex-direction: column;
     align-items: center;
     color:#FFFFFFFF;
-    text-shadow: 0 1px 1px rgba(0,0,0, 1)
+    text-shadow: 0 1px 1px rgba(0,0,0, 1);
+    min-height:84dvh;
 }
 
 .site-header
