--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -43,6 +43,72 @@ body
     box-shadow: inset 0 0 100px #000;
 }
 
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+
+
+
 .page-content
 {
     position:absolute;
@@ -77,7 +143,7 @@ body
 .content-panel{
     /* background-color: rgba(255, 255, 255, 35%); */
 
-    background: linear-gradient(#73737375, #3333330a);
+    background: linear-gradient(#232323db, #333333);
     background-size: auto 150%;
     background-position: 0 100%;
 
@@ -87,7 +153,7 @@ body
     max-height: 88dvh;
     /* min-height: 80%; */
     overflow-y: auto;
-    backdrop-filter: grayscale(36%) brightness(50%) blur(16px);
+    /* backdrop-filter: grayscale(36%) brightness(50%) blur(16px); */
     
     border-radius: 8px 0px 0px 8px;
     box-shadow: -5px 5px 5px rgba(12, 12, 12, 63%); 
@@ -101,7 +167,7 @@ body
 
 .content-wrapper
 {
-    padding:0px 20px;
+    padding:8px;
     /* display: flex; */
     flex-direction: column;
     align-items: center;
@@ -316,6 +382,26 @@ button {
   }
 
 
+  div.content-wrapper h1{
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  div.content-wrapper h2,h3,h4{
+    box-shadow: 0 1px 0 #00000030;
+    margin-bottom: 1px;
+    margin-top:32px;
+  }
+
+  div.content-wrapper p{
+    margin-top: 8px;
+  }
+
+
+  div.content-wrapper .pagnated-page-wrapper{
+    background-color: #00000030;
+    padding:8px
+  }
 
 
 @media (max-width: 1024px){
@@ -374,3 +460,177 @@ button {
     }
 };
 
+.highlight .c {
+    color: #545454;
+    font-style: italic; }
+  .highlight .err {
+    color: #f07178;
+    background-color: #e3d2d2; }
+  .highlight .k {
+    color: #89DDFF;
+    font-weight: bold; }
+  .highlight .o {
+    font-weight: bold; }
+  .highlight .cm {
+    color: #545454;
+    font-style: italic; }
+  .highlight .cp {
+    color: #545454;
+    font-weight: bold; }
+  .highlight .c1 {
+    color: #545454;
+    font-style: italic; }
+  .highlight .cs {
+    color: #545454;
+    font-weight: bold;
+    font-style: italic; }
+  .highlight .gd {
+    color: #000;
+    background-color: #fdd; }
+  .highlight .gd .x {
+    color: #000;
+    background-color: #faa; }
+  .highlight .ge {
+    font-style: italic; }
+  .highlight .gr {
+    color: #f07178; }
+  .highlight .gh {
+    color: #999; }
+  .highlight .gi {
+    color: #000;
+    background-color: #dfd; }
+  .highlight .gi .x {
+    color: #000;
+    background-color: #afa; }
+  .highlight .go {
+    color: #888; }
+  .highlight .gp {
+    color: #555; }
+  .highlight .gs {
+    font-weight: bold; }
+  .highlight .gu {
+    color: #aaa; }
+  .highlight .gt {
+    color: #f07178; }
+  .highlight .kc {
+    font-weight: bold; }
+  .highlight .kd {
+    font-weight: bold; }
+  .highlight .kp {
+    font-weight: bold; }
+  .highlight .kr {
+    font-weight: bold; }
+  .highlight .kt {
+    color: #FFCB6B;
+    font-weight: bold; }
+  .highlight .m {
+    color: #F78C6C; }
+  .highlight .s {
+    color: #C3E88D; }
+  .highlight .na {
+    color: #008080; }
+  .highlight .nb {
+    color: #EEFFFF; }
+  .highlight .nc {
+    color: #FFCB6B;
+    font-weight: bold; }
+  .highlight .no {
+    color: #008080; }
+  .highlight .ni {
+    color: #800080; }
+  .highlight .ne {
+    color: #900;
+    font-weight: bold; }
+  .highlight .nf {
+    color: #82AAFF;
+    font-weight: bold; }
+  .highlight .nn {
+    color: #555; }
+  .highlight .nt {
+    color: #FFCB6B; }
+  .highlight .nv {
+    color: #EEFFFF; }
+  .highlight .ow {
+    font-weight: bold; }
+  .highlight .w {
+    color: #EEFFFF; }
+  .highlight .mf {
+    color: #F78C6C; }
+  .highlight .mh {
+    color: #F78C6C; }
+  .highlight .mi {
+    color: #F78C6C; }
+  .highlight .mo {
+    color: #F78C6C; }
+  .highlight .sb {
+    color: #C3E88D; }
+  .highlight .sc {
+    color: #C3E88D; }
+  .highlight .sd {
+    color: #C3E88D; }
+  .highlight .s2 {
+    color: #C3E88D; }
+  .highlight .se {
+    color: #EEFFFF; }
+  .highlight .sh {
+    color: #C3E88D; }
+  .highlight .si {
+    color: #C3E88D; }
+  .highlight .sx {
+    color: #C3E88D; }
+  .highlight .sr {
+    color: #C3E88D; }
+  .highlight .s1 {
+    color: #C3E88D; }
+  .highlight .ss {
+    color: #C3E88D; }
+  .highlight .bp {
+    color: #999; }
+  .highlight .vc {
+    color: #FFCB6B; }
+  .highlight .vg {
+    color: #EEFFFF; }
+  .highlight .vi {
+    color: #EEFFFF; }
+  .highlight .il {
+    color: #F78C6C; }
+
+    blockquote {
+        color: #999999;
+        border-left: 4px solid #404040;
+        padding-left: 15px;
+        font-size: 1.125rem;
+        font-style: italic; }
+        blockquote > :last-child {
+          margin-bottom: 0; }
+        blockquote i, blockquote em {
+          font-style: normal; }
+      
+      /**
+       * Code formatting
+       */
+      pre,
+      code {
+        font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
+        font-size: 0.9375em;
+        border: 1px solid #404040;
+        border-radius: 3px;
+        background-color: #212121; }
+      
+      code {
+        padding: 1px 5px; }
+      
+      pre {
+        padding: 8px 12px;
+        overflow-x: auto; }
+        pre > code {
+          border: 0;
+          padding-right: 0;
+          padding-left: 0; }
+      
+      .highlight {
+        border-radius: 3px;
+        background: #212121; }
+        .highlighter-rouge .highlight {
+          background: #212121; }
+      
