--- a/_includes/threejsViewer.html
+++ b/_includes/threejsViewer.html
@@ -6,6 +6,7 @@
         width="100%"
         height="100%"
         frameborder="0"
-        allowfullscreen="true">
+        allowfullscreen="true"
+        loading="eager">
     </iframe>
 </div>
