--- a/_includes/threejsViewer.html
+++ b/_includes/threejsViewer.html
@@ -7,6 +7,7 @@
         height="100%"
         frameborder="0"
         allowfullscreen="true"
-        loading="eager">
+        loading="eager"
+        style="pointer-events: all;">
     </iframe>
 </div>
