Push of new design to ckas

--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -34,7 +34,7 @@
             <div class="post-title-container">
               <p class="post-title">{{ page.title }}</p>
               <p class="post-subtitle">{{ page.subtitle }}</p>
-              <div class="post-title-container">
+              <!-- <div class="post-title-container">
                 <button class="buttonCircle buttonDark tooltip" onclick="window.location.href='/test';">
                   <i class="icon" data-char="<"></i> 
                   <span class="tooltiptext">Previous Post</span>
@@ -52,7 +52,7 @@
       
                
       
-              </div>
+              </div> -->
               
             </div>
           </div>
