Updated to fix some design issues

--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -65,7 +65,7 @@
         <main class="page-content" aria-label="Content" id="page-content">
 
           <div class="top_page_wrapper" id="display_post">
-            <button class="top_page_btn page_btn top_page_btn_active">
+            <button class="top_page_btn page_btn active">
               <img src="./assets/icons/sticky_note_2.svg">
             </button>
             <button class="top_page_btn page_btn" id="display_post_list">
