--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -47,6 +47,22 @@ body
     box-shadow: inset 0 0 100px #000;
 }
 
+.settings_group{
+  display: grid;
+  grid-template-columns: auto auto;
+  /* width: 70%; */
+  margin: auto;
+  justify-content: space-around;
+
+  /* input[type=number]{
+    width: 72%;
+  }
+
+  input[type=text]{
+    width: 72%;
+  } */
+}
+
 /* The switch - the box around the slider */
 .switch {
     position: relative;
@@ -64,7 +80,6 @@ body
   
   /* The slider */
   .slider {
-    position: absolute;
     cursor: pointer;
     top: 0;
     left: 0;
@@ -115,7 +130,7 @@ body
 
 .page-content
 {  
-  float: right;
+  /* float: right; */
   height: 100dvh;
   display: flex;
   align-items: center;
@@ -216,6 +231,7 @@ body
 
 .content-panel{
     /* background-color: rgba(255, 255, 255, 35%); */
+    width: 100%;
     overflow: hidden;
     padding:8px;
 
@@ -301,7 +317,7 @@ body
 
 .portfolio_post_container{
     max-width: 600px;
-
+    width: 90%;
 }
 
 .page_title{
@@ -330,7 +346,7 @@ body
   padding:8px;
   text-shadow: unset;
   overflow-y: auto;
-
+  width: 97.5%;
   a{
     font-weight: bold;
   }
@@ -370,11 +386,6 @@ a{
   color:white;
 }
 
-.post-list 
-{
-    
-
-}
 
 
 .buttonDark {
@@ -582,6 +593,7 @@ a{
     {
         height:60dvh;
         transform: translate(0px, -16px);
+        float:none;
     }
 
     .post-title{
@@ -624,6 +636,7 @@ a{
     .content-panel{
         border-radius: 8px;
         max-height: 86dvh;
+        width: 100%;
     }
 
     .post-hidden
