--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -63,21 +63,23 @@
       <div id="portfolio_post_container" class="portfolio_post_container">
 
         <main class="page-content" aria-label="Content" id="page-content">
-
-          <div class="top_page_wrapper">
-            <button class="top_page_btn page_btn active" id="display_written_content">
-              <img src="./assets/icons/sticky_note_2.svg">
-            </button>
-            <button class="top_page_btn page_btn" id="display_post_list">
-              <img src="./assets/icons/list.svg">
-            </button>
-            <button class="top_page_btn page_btn" id="display_settings">
-              <img src="./assets/icons/settings.svg">
-            </button>
-          </div>    
+          <div style="width: 100%;">
+            <div class="top_page_wrapper">
+              <button class="top_page_btn page_btn active" id="display_written_content">
+                <img src="/assets/icons/sticky_note_2.svg">
+              </button>
+              <button class="top_page_btn page_btn" id="display_post_list">
+                <img src="/assets/icons/list.svg">
+              </button>
+              <button class="top_page_btn page_btn" id="display_settings">
+                <img src="/assets/icons/settings.svg">
+              </button>
+            </div> 
+          </div>
+             
               
           <div class="content-panel" id="content-panel">
-            <div class="content-wrapper hidden" id="post_content_container">
+            <div class="content-wrapper" id="post_content_container">
               {{ content }}
             </div>
 
@@ -123,37 +125,16 @@
               </div>
             </div>
 
-            <div class="content-wrapper" id="settings_container">
+            <div class="content-wrapper hidden" id="settings_container">
               <div class="post-list-container" id="settings_parent">
 
 
-                <div class="settings_group">
-                  <label for="fumple1"> Check Test</label>
-                  <input type="checkbox" id="fumple1" name="fumple1"/>
-                  
-                  <label for="fumple2"> Number Test</label>
-                  <input type="number" id="fumple2" name="fumple2"/>
-
-                  <label for="fumple3"> Slider Test</label>
-                  <input type="range" min="0" max="10" step="0.1" id="fumple3" name="fumple3" class="slider"/>
-
-                  <label for="fumple5"> Text Test</label>
-                  <input type="text" id="fumple5" name="fumple5"/>
-
-                  <label> colour</label>
-                  <input type="color"/>
-
-                  <label> file </label>
-                  <input type="file" accept=".glb"/>
-
-                  <label> Save Texture: </label>
-                  <input type="button" accept=".glb"/>
-                </div>
+                
               </div>
             </div>
           </div>
     
-          <div style="height:56px;">
+          <div>
             <div class="bottom_page_wrapper" id="page_btn_container">
               {%- if page.pagecount > 1 -%} 
                 {% assign pagecount = page.pagecount | plus: -1%}
