Fixed broken slider css and the page bobbing up and down

--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -134,7 +134,7 @@
             </div>
           </div>
     
-          <div>
+          <div style="height: 32px;">
             <div class="bottom_page_wrapper" id="page_btn_container">
               {%- if page.pagecount > 1 -%} 
                 {% assign pagecount = page.pagecount | plus: -1%}
