Push to look at new background on mobile

--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -16,6 +16,10 @@
       <a class="site-title" rel="author" href="/">Kris makes stuff</a>
     </header>
 
+    <div data-keep class="page-background">
+      <div data-keep class="scrolling-background-pattern"></div>
+      <div data-keep class="scrolling-background-overlay"></div>
+    </div>
 
     <div class="site-container">
       <div id="interactive_demo_container" class="interactive_demo_container">
