--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -38,13 +38,60 @@ body
 { 
     font-family: "Roboto", sans-serif;
 
-    background: url("../screenshots/MoreBlobs2.gif");
-    background-size: 300%;
+    /* background: url("../screenshots/MoreBlobs2.gif");
+    background-size: 300%; */
     
     margin: 0px;
     min-height: 100%;
 
     box-shadow: inset 0 0 100px #000;
+}
+
+.page-background{
+  background: radial-gradient(rgb(255 155 65), rgb(255 118 0));
+
+  position:absolute;
+  height: 100dvh;
+  width: 100dvw;
+  top:0px;
+  z-index: -1;
+}
+
+@keyframes pan {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+
+.scrolling-background-pattern{
+  /* background-image: url("https://assets.codepen.io/1468070/Star+Pattern+3.svg"); */
+  background-image: url("/assets/icons/circles.svg");
+  background-size: 4%;  
+  position: absolute;
+  left: 50%;
+  top: 0px;
+  translate: -50% 0%;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  min-width: 1200px;
+  opacity: 0.085;
+  animation: pan 180s linear infinite;
+  will-change: background-position;
+}
+
+.scrolling-background-overlay{
+  background: radial-gradient(circle, transparent 25%, rgb(255 118 0));
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+  z-index: 2;
 }
 
 .settings_group{
