--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -75,19 +75,18 @@ body
 }
 
 .scrolling-background-pattern{
-  /* background-image: url("https://assets.codepen.io/1468070/Star+Pattern+3.svg"); */
-  background-image: url("/assets/icons/circles.svg");
-  background-size: 2%;
-  position: absolute;
-  
-  top: 0px;
-  z-index: 1;
-  height: 200%;
-  width: 200%;
-  opacity: 0.03;
-  animation: pan 80s linear infinite;
-  will-change: transform;
-  /* transform: translate3d(0, 0, 0); */
+      /* background-image: url("https://assets.codepen.io/1468070/Star+Pattern+3.svg"); */
+      background-image: url("/assets/icons/grid.svg");
+      background-size: 0.8%;
+      position: absolute;
+      top: 0px;
+      z-index: 1;
+      height: 200%;
+      width: 200%;
+      opacity: 0.24;
+      animation: pan 80s linear infinite;
+      will-change: transform;
+      /* transform: translate3d(0, 0, 0); */
 }
 
 .scrolling-background-overlay{
