Fixed iframe highlighting probably

--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -74,6 +74,10 @@ body
   }
 }
 
+iframe{
+  user-select: none;
+}
+
 .scrolling-background-pattern{
       /* background-image: url("https://assets.codepen.io/1468070/Star+Pattern+3.svg"); */
       background-image: url("/assets/icons/grid.svg");
