--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -398,6 +398,8 @@ input:checked + .slider:before {
 .portfolio_post_container{
     max-width: 600px;
     width: 90%;
+
+    opacity: 0.92;
 }
 
 .page_title{
