--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,107 +1,143 @@
----
-layout: default
----
-{%- include css.html -%}
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>{{page.title}} - Kris makes stuff</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/portfolio-rethink.css?v=7">
+    <script type="text/javascript" src="/assets/scripts/portfolio/main.js" defer></script>
 
+    <style>
+        @media (max-width: 1024px){
+            .page-content{
+                height: 76dvh;
+            }
+        }
+    </style>
 
-<div class="home">
-    <div class="outer_container">
-        <div class="bio_container">
-            <div class="socials_card"  >
-                <div class="socials_container">
-                    <h1>Kristian Dixon</h1>
-                    <h4>Game Developer - Graphics Researcher - Software Engineer</h4>
+  </head>
 
-                    {%- include social.html -%}
-                </div>
-            </div>
-        </div>
+  <body>
+    <header class="site-header">
+      <!-- <a class="site-title" rel="author" href="/">Kris makes stuff</a> -->
+    </header>
+
+    <div data-keep class="page-background">
+      <div data-keep class="scrolling-background-pattern"></div>
+      <div data-keep class="scrolling-background-overlay"></div>
     </div>
-</div>
 
-<div class="about linebreak ">
-    <div class = "constrainwidth">
-        <h2>About</h2>
-        <div class="linebreak"></div>
-        <div class="aboutwrapper">
-            <p>Hi I’m Kris, I make lots of technical stuff both as a hobby and professionally and I wanted somewhere that I could share the things I’ve worked on.</p> 
-            <br>
-            <p>I have a MSc in Computer Science from the University of Hull and I currently work as a Lead Game Developer on a project called Stage at <a href="https://visr-vr.com/"> VISR Dynamics</a>.</p>
-            <p> My core area of interest is in graphics programming, I love everything about it to the point that I spend most of my weekends trying to implement things that I've either read about or seen in a game during the week. 
-                This is likely what a lot of this blog will cover, however I can get dragged into other research rabbitholes quite easily. <br>
-                I also am really interested in computer vision and photogrammetry. I quite like how they're almost the inverse of a lot of graphics programming stuff in that you usually are taking a 2D image and translating it back into 3D.  
-            </p>
-    
-            <br>
-            <p>Outside of programming I also love Hull City AFC. I quite enjoy obsessing over the 
-                data side of things and trying to figure out what we need to get promoted. I also enjoy playing it as a sport, I find it quite useful for clearing out my brain.</p>
-        </div>
-    </div>
-</div>
+    <div class="site-container">
+      <div id="interactive_demo_container" class="interactive_demo_container">
+        {%- if page.engine contains "model-viewer" -%}
+          {% assign modelpath = page.modelpath %}
+          {% include modelViewer.html id=page.modelpath %}
+        {%- endif -%}
 
-{% assign posts = site.posts %}
-{%- if posts.size > 0 -%}
-<div class="blogwrapper linebreak">
-    <div class = "constrainwidth">
-        <h2 style="text-align: center">Blog</h2>
-        <div class="linebreak"></div>
-        
-        <div class="blog">
-            <div class="latestposts leftverticalbreak rightverticalbreak">
-    
-                    <h2>Recent Posts</h2>
-    
-                        <ul class="post-list">
-                            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-                            {%- for post in posts -%}
-                                {%- if post.categories contains "Hidden" -%}
-                                    {% continue %}
-                                {%- endif -%}
+        {%- if page.engine contains "threejs-viewer" -%}
+          {% assign modelpath = page.modelpath %}
+          {% include threejsViewer.html demo=page.demo %}
+        {%- endif -%}
 
-                                    <li>
-                                        <h4 style="margin: 0px;">
-                                            <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
-                                                {{ post.title | escape }}
-                                            </a>
-                                            <div style="display: flex; flex-direction:row; margin:auto;">
-                                                <span class="post-meta post-meta-tags">Tags: 
-                                                    
-                                                    {% for tag in post.tags %}
-                                                    {{ tag }} 
-                                                    
-                                                    {% endfor %}
-                                                    
-                                                </span>
-                                                <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
-                                            </div>
-                                        </h4>
-                                        {%- if site.show_excerpts -%}
-                                            {{ post.excerpt }}
-                                        {%- endif -%}
-                                    </li>
-                                <!--{%- if post.categories contains "update" -%}-->
-                                <!--{%- endif -%}-->
-    
-                            {%- endfor -%}
-                        </ul>
-    
-                        <a href="">More posts</a>
+        <div id="page_title" style="height:100%;" class="page_title">
+          <div class="navigation-wrapper" id="navigation-wrapper" style="height: 100%; align-items: center;">
+            <div class="post-title-container">
+              <p class="post-title" style="font-size:3rem;">Kristian Dixon</p>
+              <p class="post-subtitle" style="font-size:1.2rem; margin: 4px 0px 8px 0px;">Game Developer - Graphics Researcher - Software Engineer</p> 
+
+              {%- include social.html -%}     
+
             </div>
-                
-            <div class="postexcerpt leftverticalbreak rightverticalbreak">
-                <h2>Featured Post</h2>
-                
-                
-                <div class="previewwrapper">
-                    {% assign p = site.posts[0] %}
-                    {{ p.content  | truncatewords:150}}
-                    <a href="{{p.url}}"> read more</a>
-                </div>
-            </div>
+          </div>
         </div>
 
+      </div>
+
+      <div id="portfolio_post_container" class="portfolio_post_container">
+
+        <main class="page-content" aria-label="Content" id="page-content">
+          <div style="width: 100%;">
+            <div class="top_page_wrapper">
+              <button class="top_page_btn page_btn active" id="display_written_content">
+                <img src="/assets/icons/sticky_note_2.svg">
+              </button>
+              <button class="top_page_btn page_btn" id="display_post_list">
+                <img src="/assets/icons/list.svg">
+              </button>
+              <button class="top_page_btn page_btn" id="display_settings">
+                <img src="/assets/icons/settings.svg">
+              </button>
+            </div> 
+          </div>
+             
+              
+          <div class="content-panel" id="content-panel">
+            <div class="content-wrapper" id="post_content_container">
+              {{ content }}
+            </div>
+
+            <div class="content-wrapper hidden" id="post_list_container"> 
+              
+              <div class="post-list-container">
+
+                <h2 style="margin-top:0px; margin-bottom:8px;">
+                  More Posts
+                </h2>
+
+                <ul class="post-list">
+                  {% assign posts = site.posts %}
+                  {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                  {%- for post in posts -%}
+                      {%- if post.categories contains "Hidden" -%}
+                          {% continue %}
+                      {%- endif -%}
+
+                      <li onclick="location.href=`{{ post.url | relative_url }}`;">
+                          <div style="margin: 0px;">
+                            <label style="text-align: left; font-weight: bold;" class="post-link" href="{{ post.url | relative_url }}">
+                                {{ post.title | escape }}
+                            </label>
+                            <div style="display: flex; flex-direction:row; margin:auto;">                            
+                                <span class="post-meta post-meta-date">Posted: {{ post.date | date: date_format }}</span>
+                            </div>
+                          </div>
+                      </li>
+
+                  {%- endfor -%}
+                </ul>
+              </div>
+            </div>
+
+            <div class="content-wrapper hidden" id="settings_container">
+              <div class="post-list-container" id="settings_parent">
+
+
+                
+              </div>
+            </div>
+          </div>
+    
+          <div style="height: 32px;">
+            <div class="bottom_page_wrapper" id="page_btn_container">
+              {%- if page.pagecount > 1 -%} 
+                {% assign pagecount = page.pagecount | plus: -1%}
+                {% for counter in (0..pagecount)%}
+                  <button class="post-controls page_btn bottom_page_btn" data-page-index={{counter}}>
+                    <span>{{counter | plus: 1}}</span>
+                  </button>    
+                {% endfor %}
+              {%- endif -%}
+            </div>
+          </div>
+
+        </main>
+
+      </div>
     </div>
-        
-    <div class="linebreak"></div>
-{%- endif -%}
-</div>
+
+  </body>
+
+</html>
